Wrap thumbnails to make sure they take up a consistent width.

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -136,6 +136,8 @@ article.message {
     .thumbnail {
       float: left;
       margin-right: 10px;
+      width: 50px;
+      height: 50px;
     }
   }
   .body {
